<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/dialog_out_bg"
    android:padding="10dp" >

    <LinearLayout
        android:id="@+id/info_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/dialog_alert_bg"
        android:orientation="vertical"
        android:paddingTop="10dp" >

        <com.runningracehisotry.views.CustomFontTextView
            android:id="@+id/alert_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="9dp"
            android:text="@string/dialog_forgot_pass_title"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <com.runningracehisotry.views.CustomFontTextView
            android:id="@+id/alert_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="9dp"
            android:paddingRight="9dp"
            android:paddingTop="9dp"
            android:text="@string/dialog_forgot_pass_message"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/alert_reset_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:inputType="textEmailAddress" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/view_seperator_bg" />

        <com.runningracehisotry.views.CustomFontTextView
            android:id="@+id/alert_forgot_password_reset_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="9dp"
            android:text="@string/ok"
            android:textColor="@color/dialog_button_text_color"
            android:textSize="18sp"
            android:textStyle="bold" >
        </com.runningracehisotry.views.CustomFontTextView>
    </LinearLayout>

</RelativeLayout>