<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <LinearLayout
        android:id="@+id/races_detail_sort_layout"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:gravity="center_vertical"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="6dp"
        android:orientation="horizontal" >

        <com.runningracehisotry.views.CustomFontTextView
            android:id="@+id/races_detail_sort_text"
            android:layout_width="wrap_content"
            android:layout_height="31dp"
            android:layout_marginTop="1dp"
            android:gravity="center"
            android:paddingEnd="7dp"
            android:paddingLeft="0dp"
            android:paddingRight="7dp"

            android:paddingBottom="1dp"

            android:text="@string/races_detail_sort_by"
            android:textSize="@dimen/races_detail_sort_by_text" />

        <RadioGroup
            android:id="@+id/races_detail_sort_group"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:layout_height="29dp"
            android:divider="@drawable/divide_sort_race"
            android:orientation="horizontal"
            android:padding="1dp" >

            <RadioButton
                android:id="@+id/races_detail_sort_date"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:button="@null"
                android:checked="true"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="2dp"
                android:text="@string/races_detail_sort_date"
                android:textSize="@dimen/races_detail_sort_item_text" />
            <View
                android:id="@+id/races_detail_sort_1"
                android:visibility="gone"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/text_button_bg_other" />

            <RadioButton
                android:id="@+id/races_detail_sort_time"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:button="@null"

                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="2dp"
                android:text="@string/races_detail_sort_time"
                android:textSize="@dimen/races_detail_sort_item_text"
                android:background="@android:color/white" />
            <View
                android:id="@+id/races_detail_sort_2"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:visibility="gone"
                android:background="@color/text_button_bg_other" />
            <RadioButton
                android:id="@+id/races_detail_sort_length"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:button="@null"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="2dp"
                android:text="@string/races_detail_sort_length"
                android:textSize="@dimen/races_detail_sort_item_text"
                android:background="@android:color/white" />
        </RadioGroup>
    </LinearLayout>

    <com.runningracehisotry.views.CustomImageButton
        android:id="@+id/races_detail_title_dummy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/races_detail_sort_layout"
        android:layout_marginTop="-7dp"

        android:background="@drawable/ic_races_detail_title_dummy"
        android:contentDescription="@null"
        android:visibility="invisible" />

    <com.runningracehisotry.views.CustomFontTextView
        android:id="@+id/races_detail_no_item"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/layout_buttons_bottom"
        android:layout_below="@+id/races_detail_title_dummy"
        android:gravity="center_vertical"
        android:padding="20dp"
        android:text="@string/races_detail_please_add_race"
        android:textColor="@color/empty_text_color"
        android:textSize="@dimen/races_empty_text"
        android:visibility="invisible" />

    <ExpandableListView
        android:id="@+id/races_detail_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layout_buttons_bottom"
        android:layout_below="@+id/races_detail_title_dummy"
        android:groupIndicator="@null" />

    <com.runningracehisotry.views.CustomImageButton
        android:id="@+id/races_detail_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/races_detail_sort_layout"
        android:layout_marginTop="-7dp"
        android:adjustViewBounds="false"
        android:contentDescription="@null" />

    <com.runningracehisotry.views.CustomFontTextView
        android:id="@+id/races_detail_title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/races_detail_sort_layout"
        android:gravity="center_vertical"
        android:layout_marginStart="55dp"
        android:text="@string/detail_race_type_other"
        android:textColor="@color/white"
        android:textSize="@dimen/add_race_title_text_size"
        android:textStyle="bold"
        android:visibility="invisible"
        android:paddingTop="25dp"
        android:layout_marginLeft="55dp"
        android:paddingLeft="60dp" />

    <include
        android:id="@+id/layout_buttons_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        layout="@layout/layout_buttons_bottom" />

</RelativeLayout>